update ihm and others things