@@ -2,6 +2,7 @@ package com.miage.altea.game_ui.pokemonTypes.service;
 
 import com.miage.altea.game_ui.pokemonTypes.PokemonType;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.i18n.LocaleContextHolder;
 import org.springframework.http.HttpEntity;
@@ -13,6 +14,7 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.client.RestTemplate;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 @Service
@@ -23,8 +25,11 @@ public class PokemonTypeServiceImpl implements PokemonTypeService {
 
     @Override
     public List<PokemonType> listPokemonsTypes() {
-        var result = restTemplate.getForObject(pokemonServiceUrl+"/pokemon-types/", PokemonType[].class);
-        return List.of(result);
+        MultiValueMap<String, String> headers = new HttpHeaders();
+        headers.add("Accept-Language", LocaleContextHolder.getLocale().toLanguageTag());
+        HttpEntity entity = new HttpEntity(headers);
+        PokemonType[] pts = restTemplate.exchange(pokemonServiceUrl+"/pokemon-types/",HttpMethod.GET,entity,PokemonType[].class).getBody();
+        return Arrays.asList(pts);
     }
 
     @Override
@@ -46,10 +51,14 @@ public class PokemonTypeServiceImpl implements PokemonTypeService {
     }
 
     public PokemonType getPokemon(int id) {
-        return restTemplate.getForObject(pokemonServiceUrl + "/pokemon-types/"+id, PokemonType.class);
+        MultiValueMap<String,String> headers = new HttpHeaders();
+        headers.add("Accept-Language", LocaleContextHolder.getLocale().toLanguageTag());
+        HttpEntity entity = new HttpEntity(headers);
+        return restTemplate.exchange(pokemonServiceUrl + "/pokemon-types/"+id,HttpMethod.GET,entity,PokemonType.class).getBody();
     }
 
     @Autowired
+    @Qualifier("pokemonApiRestTemplate")
     public void setRestTemplate(RestTemplate restTemplate) {
         this.restTemplate = restTemplate;
     }
